[package]
name = "fifteen"
version = "0.1.0"
authors = ["Nathan Jhaveri <nathanj@porch.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "*"
intcode = { path = "../intcode" }

[[bin]]
name = "fifteen"
path = "./src/bin.rs"
